fix issue with country selector flag not showing fix selectionListDemo issues (add diff data-id to each radio demo)

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2214,7 +2214,7 @@ input[type=file] {
         input[type=password],
         textarea {
             cursor: text;
-            background: $color-white;
+            background-color: $color-white;
             border-color: $color-timberwolf;
 
             &:hover,
